<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">jozef_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_science">Science</string>
  <string name="lbl_musique">Musique</string>
  <string name="lbl_philo">Philo</string>
  <string name="msg_yjemli945_gmail">yjemli945@gmail.com</string>
  <string name="lbl_italien">Italien</string>
  <string name="lbl_histoire">Histoire</string>
  <string name="msg_mohamed_amine">Mohamed Amine \u2028Ben Aoun</string>
  <string name="lbl_les_options">Les options</string>
  <string name="lbl_espagnol">Espagnol</string>
  <string name="lbl_allemand">Allemand</string>
  <string name="lbl_3_me">3éme</string>
  <string name="lbl_info">Info</string>
  <string name="lbl_retourner">Retourner</string>
  <string name="lbl_arabe">Arabe</string>
  <string name="lbl_2_me">2éme</string>
  <string name="lbl_2_me_trimestre">2éme Trimestre</string>
  <string name="lbl_les_mati_res">Les matiéres</string>
  <string name="lbl_russe">Russe</string>
  <string name="lbl_1_re">1ère</string>
  <string name="lbl_3_me_trimestre">3éme Trimestre</string>
  <string name="lbl_physique">Physique</string>
  <string name="msg_cette_applicati">Cette application par les étudiants vous donne des cours à vos niveaux scolaires</string>
  <string name="lbl_retour">Retour</string>
  <string name="lbl_prog">Prog</string>
  <string name="lbl_poursuivre">poursuivre</string>
  <string name="lbl_chine">Chine</string>
  <string name="lbl_cr_ateurs">Créateurs :</string>
  <string name="lbl_1_r">1èr</string>
  <string name="lbl_tech">Tech</string>
  <string name="lbl_lettres">Lettres</string>
  <string name="lbl_sti">STI</string>
  <string name="lbl_anglais">Anglais</string>
  <string name="msg_midorre30_gmail">Midorre30@gmail.com</string>
  <string name="lbl_dessin">Dessin</string>
  <string name="lbl_lyc_e">Lycée</string>
  <string name="lbl_math">Math</string>
  <string name="lbl_4_me">4éme</string>
  <string name="lbl_1_re_trimestre">1ére Trimestre</string>
  <string name="lbl_youssef_jemli">Youssef Jemli</string>
  <string name="lbl_contacts">Contacts :</string>
  <string name="lbl_fran_ais">Français</string>
  <string name="lbl_eco">Eco</string>
  <string name="lbl_a_propos">A propos</string>
  <string name="lbl_g_o">Géo</string>
  <string name="lbl_option">Option</string>
  <string name="lbl_e">e</string>
  <string name="lbl_bienvenue">Bienvenue !</string>
</resources>
