<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameIPhone1313"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_900">
        <LinearLayout android:id="@+id/linearColumnapropos"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtApropos"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_a_propos"
                style="@style/txtDekko48" tools:text="@string/lbl_a_propos"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtCrateurs"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_cr_ateurs"
                style="@style/txtDekko48_1" tools:text="@string/lbl_cr_ateurs"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtYoussefJemli"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_youssef_jemli"
                style="@style/txtDekko40" tools:text="@string/lbl_youssef_jemli"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtMohamedAmine"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_mohamed_amine"
                style="@style/txtDekko40" tools:text="@string/msg_mohamed_amine"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtContacts"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_contacts"
                style="@style/txtDekko48_1" tools:text="@string/lbl_contacts"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRow6856851513ema"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/image6856851513ema"
                    android:layout_height="@dimen/_34pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="@dimen/_43pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_6856851513ema"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_6856851513ema"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_weight="0.86"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/msg_yjemli945_gmail"
                    style="@style/txtDekko32" tools:text="@string/msg_yjemli945_gmail"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRow6856851513emaOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/image6856851513emaOne"
                    android:layout_height="@dimen/_34pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="@dimen/_43pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_6856851513ema"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_6856851513ema"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmailOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_weight="0.86"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/msg_midorre30_gmail"
                    style="@style/txtDekko32" tools:text="@string/msg_midorre30_gmail"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroupFourteen"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_68pxv"
                android:layout_width="wrap_content"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_18pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@string/lbl_retourner"
                style="@style/txtSolidRounded" tools:text="@string/lbl_retourner"/>
        </LinearLayout>
    </FrameLayout>
</layout>
