<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearIPhone1313"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_100">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackrectanglenine"
            android:layout_height="@dimen/_642pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageRectangleNine"
                android:layout_gravity="start"
                android:layout_height="@dimen/_626pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_40pxh}"
                imageRes="@{@drawable/img_rectangle9}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle9"/>
            <FrameLayout
                android:id="@+id/frameStackrectangletwentythree"
                android:layout_gravity="start"
                android:layout_height="@dimen/_642pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageRectangleTwentyThree"
                    android:layout_gravity="start"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_rectangle23}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle23"/>
                <LinearLayout android:id="@+id/linearColumnmegaphone"
                    android:layout_gravity="top|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <ImageView android:id="@+id/imageMegaphone"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="@dimen/_25pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_megaphone"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_megaphone"/>
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/linearColumninfo"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_35pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <LinearLayout android:id="@+id/linearRowinfo"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" android:orientation="horizontal">
                            <androidx.appcompat.widget.AppCompatButton
                                android:ellipsize="end"
                                android:gravity="center"
                                android:id="@+id/btnInfo"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:layout_width="0dp"
                                android:letterSpacing="0.25"
                                android:lineSpacingExtra="@dimen/_10pxh"
                                android:paddingBottom="@dimen/_12pxv"
                                android:paddingEnd="@dimen/_30pxh"
                                android:paddingStart="@dimen/_30pxh"
                                android:paddingTop="@dimen/_12pxv"
                                android:singleLine="true"
                                android:text="@string/lbl_info"
                                android:textAllCaps="false"
                                style="@style/btnSolidRounded_4" tools:text="@string/lbl_info"/>
                            <androidx.appcompat.widget.AppCompatButton
                                android:ellipsize="end"
                                android:gravity="center"
                                android:id="@+id/btnEco"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_26pxh"
                                android:layout_weight="0.5"
                                android:layout_width="0dp"
                                android:letterSpacing="0.25"
                                android:lineSpacingExtra="@dimen/_10pxh"
                                android:paddingBottom="@dimen/_12pxv"
                                android:paddingEnd="@dimen/_30pxh"
                                android:paddingStart="@dimen/_30pxh"
                                android:paddingTop="@dimen/_12pxv"
                                android:singleLine="true"
                                android:text="@string/lbl_eco"
                                android:textAllCaps="false"
                                style="@style/btnSolidRounded_5" tools:text="@string/lbl_eco"/>
                        </LinearLayout>
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end"
                            android:gravity="center"
                            android:id="@+id/btnScience"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_57pxh"
                            android:layout_marginStart="@dimen/_57pxh"
                            android:layout_marginTop="@dimen/_38pxv"
                            android:layout_width="match_parent"
                            android:letterSpacing="0.25"
                            android:lineSpacingExtra="@dimen/_10pxh"
                            android:paddingBottom="@dimen/_12pxv"
                            android:paddingEnd="@dimen/_29pxh"
                            android:paddingStart="@dimen/_28pxh"
                            android:paddingTop="@dimen/_12pxv"
                            android:singleLine="true"
                            android:text="@string/lbl_science"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded_6" tools:text="@string/lbl_science"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end"
                            android:gravity="center"
                            android:id="@+id/btnLettres"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_57pxh"
                            android:layout_marginStart="@dimen/_57pxh"
                            android:layout_marginTop="@dimen/_26pxv"
                            android:layout_width="match_parent"
                            android:letterSpacing="0.25"
                            android:lineSpacingExtra="@dimen/_10pxh"
                            android:paddingBottom="@dimen/_12pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_28pxh"
                            android:paddingTop="@dimen/_12pxv"
                            android:singleLine="true"
                            android:text="@string/lbl_lettres"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded_7" tools:text="@string/lbl_lettres"/>
                        <LinearLayout android:id="@+id/linearRowtech"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_38pxv"
                            android:layout_width="match_parent" android:orientation="horizontal">
                            <androidx.appcompat.widget.AppCompatButton
                                android:ellipsize="end"
                                android:gravity="center"
                                android:id="@+id/btnTech"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:layout_width="0dp"
                                android:letterSpacing="0.25"
                                android:lineSpacingExtra="@dimen/_10pxh"
                                android:paddingBottom="@dimen/_12pxv"
                                android:paddingEnd="@dimen/_26pxh"
                                android:paddingStart="@dimen/_30pxh"
                                android:paddingTop="@dimen/_12pxv"
                                android:singleLine="true"
                                android:text="@string/lbl_tech"
                                android:textAllCaps="false"
                                style="@style/btnSolidRounded_8" tools:text="@string/lbl_tech"/>
                            <androidx.appcompat.widget.AppCompatButton
                                android:ellipsize="end"
                                android:gravity="center"
                                android:id="@+id/btnMath"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_26pxh"
                                android:layout_weight="0.5"
                                android:layout_width="0dp"
                                android:letterSpacing="0.25"
                                android:lineSpacingExtra="@dimen/_10pxh"
                                android:paddingBottom="@dimen/_12pxv"
                                android:paddingEnd="@dimen/_21pxh"
                                android:paddingStart="@dimen/_25pxh"
                                android:paddingTop="@dimen/_12pxv"
                                android:singleLine="true"
                                android:text="@string/lbl_math"
                                android:textAllCaps="false"
                                style="@style/btnSolidRounded_9" tools:text="@string/lbl_math"/>
                        </LinearLayout>
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end"
                            android:gravity="center"
                            android:id="@+id/btnOption"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_57pxh"
                            android:layout_marginStart="@dimen/_57pxh"
                            android:layout_marginTop="@dimen/_38pxv"
                            android:layout_width="match_parent"
                            android:letterSpacing="0.25"
                            android:lineSpacingExtra="@dimen/_10pxh"
                            android:paddingBottom="@dimen/_12pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_30pxh"
                            android:paddingTop="@dimen/_12pxv"
                            android:singleLine="true"
                            android:text="@string/lbl_option"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded_10" tools:text="@string/lbl_option"/>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRetour" android:layout_gravity="start"
            android:layout_height="@dimen/_51pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_117pxv"
            android:layout_width="@dimen/_147pxh"
            android:lineSpacingExtra="@dimen/_11pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@string/lbl_retour"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_retour"/>
    </LinearLayout>
</layout>
