<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearIPhone1313"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_100">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackrectangletwentyfour"
            android:layout_height="@dimen/_626pxv"
            android:layout_width="match_parent" style="@style/groupStyleteal_900cornerRadius">
            <ImageView android:id="@+id/imageRectangleTwentyFour"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_572pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_rectangle24}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle24"/>
            <LinearLayout android:id="@+id/linearColumnmegaphone"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="wrap_content" android:orientation="vertical">
                <ImageView android:id="@+id/imageMegaphone"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_megaphone"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_megaphone"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btn1reTrimestre"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_70pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_84pxv"
                    android:layout_width="@dimen/_259pxh"
                    android:letterSpacing="0.17"
                    android:lineSpacingExtra="@dimen/_22pxh"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_28pxh"
                    android:paddingStart="@dimen/_28pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_1_re_trimestre"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_11" tools:text="@string/lbl_1_re_trimestre"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btn2meTrimestre"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_70pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_56pxv"
                    android:layout_width="@dimen/_259pxh"
                    android:letterSpacing="0.17"
                    android:lineSpacingExtra="@dimen/_22pxh"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_20pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_2_me_trimestre"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_11" tools:text="@string/lbl_2_me_trimestre"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btn3meTrimestre"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_70pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_56pxv"
                    android:layout_width="@dimen/_259pxh"
                    android:letterSpacing="0.17"
                    android:lineSpacingExtra="@dimen/_22pxh"
                    android:paddingBottom="@dimen/_12pxv"
                    android:paddingEnd="@dimen/_20pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_3_me_trimestre"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_11" tools:text="@string/lbl_3_me_trimestre"/>
            </LinearLayout>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRetour" android:layout_gravity="start"
            android:layout_height="@dimen/_51pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_134pxv"
            android:layout_width="@dimen/_147pxh"
            android:lineSpacingExtra="@dimen/_11pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@string/lbl_retour"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_retour"/>
    </LinearLayout>
</layout>
